# flashapi

./: Cargo.toml  README.md
FlashAPI/: DELETE.bru  GET.bru  PATCH.bru  POST.bru  PUT.bru  bruno.json
examples/: postgres_db.rs
src/: lib.rs  main.rs
src/server/: handler.rs  http.rs  mod.rs  request.rs  response.rs  server.rs
