[package]
name = "flashapi"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A lightweight webserver."
homepage = "https://flashapi.surajpheudin.com"
repository = "https://github.com/surajpheudin/flashapi"
readme = "README.md"
keywords = ["webserver", "api"]
categories = ["web-programming", "web-programming::http-server"]
authors = ["Suraj Pheudin"]
documentation = "https://docs.rs/flashapi"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
sqlx = {version = "0.8.6", features = [ "chrono", "postgres", "runtime-tokio", "tls-native-tls",]}

